--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -30,6 +30,7 @@
                 <%= f.radio_button :comfort_score, 5 %> 5
                 <% end %>
             </div>
+            <div class="verticalLine"></div>
             <div class="score">
                 <p><%= label_tag :completeness_score, "Completion" %></p>
 
