--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -387,6 +387,7 @@ h4 {
 .survey-wrapper {
     width: 60vw;
     margin: 0 auto;
+    padding-bottom: 100px;
 }
 
 
@@ -412,6 +413,7 @@ h4 {
     border-left: 1px solid lightgrey;
     height: 100px;
     display: inline-block;
+    margin-left: 8px;
 }
 
 label {
