updated CSS for report page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -415,7 +415,7 @@ h4 {
 @media (max-width: 800px){
     .box-wrapper {
         width: 400px;
-        margin: 0;
+        margin: 0 auto;
     }
     .box {
         display:block;
